fix website horizontal overflow on mobile

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -432,6 +432,7 @@ button, input, textarea, h1, h2, h3, h4, h5 {
     }
 
     .message {
+      width: 100%;
       margin-top: 50px;
 
       .message__title {
